# excel-mcp

./: .gitignore  README.JA.md  README.md
java/: log4j_config.xml  test.xlsx  test01.json
java/src/jp/isoittech/: AppendRowsTool.java  ApplyFormulaTool.java  CellInfo.java  CopyRangeTool.java  CopyWorksheetTool.java  CreateChartTool.java  CreateExcelTool.java  CreatePivotTableTool.java  CreateSheetTool.java  DeleteRangeTool.java  DeleteWorksheetTool.java  ExcelRangeUtils.java  ExcelUtils.java  FormatRangeTool.java  JsonData.java  ListSheetsTool.java  MergeCellsTool.java  ReadExcelTool.java  ReadJsonFile.java  RenameWorksheetTool.java  UnmergeCellsTool.java  UpdateExcelFile.java  ValidateExcelRangeTool.java  ValidateFormulaSyntaxTool.java  WriteExcelTool.java  WriteRangeTool.java
java/tools/: compile.sh
py/: .env.example  Dockerfile  README.md  docker-compose.yml  excel_mcp_server.py  mcp-config.json  pyproject.toml
py/excel/: __init__.py
py/shared/: edo_vs_muromachi_updated.xlsx
py/src/excel/: __init__.py  wrapper.py
